fixed animation issue on mobile

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
   cursor: pointer;
   font-family: "Libre Baskerville", serif;
   font-size: 20px;
-  /* font-style: italic; */
+  font-style: italic;
   font-weight: 400;
   padding: 13px 20px;
   background-color: #b2b2b2;
@@ -181,7 +181,7 @@ body {
   font-family: "Libre Baskerville", serif;
   font-size: 28px;
   font-weight: 400;
-  /* font-style: italic; */
+  font-style: italic;
   width: 800px;
   color: white;
   opacity: 0.7;
